--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
 
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/919876543210" target="_blank" class="floating-btn bg-gradient-to-r from-green-600 to-emerald-500 hover:from-green-500 hover:to-emerald-400 text-white p-4 rounded-full shadow-2xl pulse-animation">
+    <a href="https://wa.me/919622749083" target="_blank" class="floating-btn bg-gradient-to-r from-green-600 to-emerald-500 hover:from-green-500 hover:to-emerald-400 text-white p-4 rounded-full shadow-2xl pulse-animation">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
 
@@ -241,7 +241,7 @@
                         <a href="#" class="text-gray-400 hover:text-purple-400 transition-colors text-xl">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://wa.me/919876543210" class="text-gray-400 hover:text-green-400 transition-colors text-xl">
+                        <a href="https://wa.me/919622749083" class="text-gray-400 hover:text-green-400 transition-colors text-xl">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
@@ -253,15 +253,15 @@
                         <i class="fas fa-phone mr-2 text-purple-400"></i>Contact Us
                     </h4>
                     <div class="space-y-4">
-                        <a href="tel:+919876543210" class="flex items-center text-gray-300 hover:text-white transition-colors">
+                        <a href="tel:+919622749083" class="flex items-center text-gray-300 hover:text-white transition-colors">
                             <i class="fas fa-phone mr-3 text-blue-400"></i>
-                            +91 98765 43210
+                            +91 9622749083
                         </a>
                         <a href="mailto:info@modernplygallery.com" class="flex items-center text-gray-300 hover:text-white transition-colors">
                             <i class="fas fa-envelope mr-3 text-blue-400"></i>
                             info@modernplygallery.com
                         </a>
-                        <a href="https://wa.me/919876543210" class="flex items-center text-gray-300 hover:text-green-400 transition-colors">
+                        <a href="https://wa.me/919622749083" class="flex items-center text-gray-300 hover:text-green-400 transition-colors">
                             <i class="fab fa-whatsapp mr-3 text-green-400"></i>
                             WhatsApp Support
                         </a>
@@ -276,7 +276,7 @@
                     <div class="text-gray-300 space-y-4">
                         <div>
                             <p class="font-medium">Address:</p>
-                            <p>123 Industrial Area<br>Hardware Market<br>City, State - 123456</p>
+                            <p>Rakh Litter <br>Main Market<br>Pulwama, Kashmir - 192301</p>
                         </div>
                         <div>
                             <p class="font-medium">Business Hours:</p>
