--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="images/logo-512.png">
     <link rel="apple-touch-icon" href="images/logo-192.png">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="tailwind.css">
+    <script src="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.17/lib/index.min.js" onerror="(function(){var s=document.createElement('script');s.src='https://unpkg.com/tailwindcss@3.4.17/lib/index.min.js';s.onerror=function(){var s2=document.createElement('script');s2.src='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/3.4.17/tailwind.min.js';document.head.appendChild(s2);};document.head.appendChild(s);})();"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
